test/src/e2e_vm_tests/test_programs/should_fail/conditional_compilation/bad_program_type/src/main.sw
script;

#[cfg(program_type = "scriptz")]
fn main() {
  ()
}
